<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="1020dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="250dp"
        android:background="@drawable/simple_border"
        android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
        android:textSize="20dp"
        android:paddingLeft="10px"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/bt_show"
        android:textSize="18sp"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="9999/99/99 99時99分"
        android:textSize="15sp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="15dp">

        <TextView
            android:id="@+id/allNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="全9999件"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/maximumNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="999"
            android:textSize="15sp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/minimumNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="999"
            android:textSize="15sp" />
    </LinearLayout>

    <Spinner
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginTop="85dp"
        android:layout_marginRight="10dp"
        android:entries="@array/list"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/lv_shape"
            android:textSize="15sp"
            android:textAlignment="center"
            android:background="@drawable/simple_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lv_product_number"
            android:textSize="15sp"
            android:textAlignment="center"
            android:background="@drawable/simple_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:text="@string/lv_product_name"
            android:textSize="15sp"
            android:textAlignment="center"
            android:background="@drawable/simple_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/lv_rack_number"
            android:textSize="15sp"
            android:textAlignment="center"
            android:background="@drawable/simple_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/lv_needs"
            android:textSize="15sp"
            android:textAlignment="center"
            android:background="@drawable/simple_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/lv_picking"
            android:textSize="15sp"
            android:textAlignment="center"
            android:background="@drawable/simple_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/lv_state"
            android:textSize="15sp"
            android:textAlignment="center"
            android:background="@drawable/simple_border"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/simple_border"/>


</FrameLayout>