<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:src="@android:drawable/ic_delete"
            android:background="#f3f3f3"
            android:onClick="backIntent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_order_detail"
            android:textSize="25sp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="1020dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="250dp"
            android:background="@drawable/simple_border"
            android:text=""
            android:textSize="20dp"
            android:paddingLeft="10px"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />


        <TextView
            android:id="@+id/datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9999/99/99 99時99分"
            android:textSize="15sp"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="15dp"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="15dp">

            <TextView
                android:id="@+id/allNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="全9999件"
                android:textSize="15sp" />


        </LinearLayout>

        <Spinner
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginTop="85dp"
            android:layout_marginRight="10dp"
            android:id="@+id/spRefinement"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="125dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_border"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/lv_shape"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/simple_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/lv_product_number"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/simple_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/lv_product_name"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/simple_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/lv_amount"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/simple_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/lv_step"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/simple_border"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

        </LinearLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/simple_border"/>

    </FrameLayout>
    <!-- The navigation drawer -->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#333"
        android:orientation="vertical">

        <Button
            android:id="@+id/drawer_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="ピッキングリスト"
            android:background="#333"
            android:textColor="#fff"
            android:onClick="intentPicking"/>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="発注状況"
            android:background="#333"
            android:textColor="#fff"
            android:onClick="intentOrder"/>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>