<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:src="@android:drawable/ic_delete"
            android:background="#f3f3f3"
            android:onClick="backIntent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_picking"
            android:textSize="25sp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="1020dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="280dp"
            android:background="@drawable/simple_border"
            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
            android:textSize="20dp"
            android:paddingLeft="10px"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />



        <TextView
            android:id="@+id/datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9999/99/99 99時99分"
            android:textSize="15sp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:text="@string/lv_rack_number"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:background="@drawable/simple_border" />

            <TextView
                android:id="@+id/dRackNumbers"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:text=""
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:background="@drawable/simple_border" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginTop="120dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/lv_state"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:background="@drawable/simple_border"/>

            <TextView
                android:id="@+id/dState"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:text="フラグ"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:background="@drawable/simple_border" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="190dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:text="@string/lv_product_number"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/simple_border"/>

                <TextView
                    android:layout_width="1070dp"
                    android:layout_height="50dp"
                    android:text="@string/lv_product_name"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/simple_border"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dProductNumber"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:text=""
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/simple_border"/>

                <TextView
                    android:id="@+id/dProductName"
                    android:layout_width="1070dp"
                    android:layout_height="70dp"
                    android:text=""
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/simple_border"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="340dp">

            <TextView
                android:layout_width="600dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:text="@string/tv_note"
                android:textAlignment="center"
                android:background="@drawable/simple_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <EditText
                android:id="@+id/dNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="9"
                android:gravity="top|left"
                android:textSize="15sp"
                android:background="@drawable/simple_border"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="340dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:text="@string/lv_needs"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/simple_border"/>

                <TextView
                    android:layout_width="400dp"
                    android:layout_height="50dp"
                    android:text="@string/lv_picking"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/simple_border"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dNeeds"
                    android:layout_width="400dp"
                    android:layout_height="130dp"
                    android:text="９９９９"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:paddingTop="40dp"
                    android:background="@drawable/simple_border"/>

                <TextView
                    android:id="@+id/dPiking"
                    android:layout_width="400dp"
                    android:layout_height="130dp"
                    android:text="9999"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:paddingTop="40dp"
                    android:background="@drawable/simple_border"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="400dp"
                    android:layout_height="180dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@drawable/simple_border">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_flg"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="400dp"
                    android:layout_height="180dp"
                    android:orientation="horizontal"
                    android:background="@drawable/simple_border"
                    android:weightSum="1">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="30dp"
                        android:text="↓"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="40dp"
                        android:text="↑" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
    <!-- The navigation drawer -->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#333"
        android:orientation="vertical">

        <Button
            android:id="@+id/drawer_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="ピッキングリスト"
            android:background="#333"
            android:textColor="#fff"
            android:onClick="intentPicking"/>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="発注状況"
            android:background="#333"
            android:textColor="#fff"
            android:onClick="intentOrder"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>